# noted

./: .gitignore  .releaserc  CHANGELOG.md  Cargo.toml  README.md  build.sh  package.json  publish.sh  test.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
eng/: build.sh  build2.sh  bump-version.sh  publish.sh  test.sh
src/: cli.rs  command.rs  configuration.rs  file_rolling.rs  lib.rs  main.rs  markdown.rs  note.rs  note_file.rs  note_template.rs  noted.rs  search_result.rs
src/noted/: integration_tests.rs  tests.rs
tests/: cli.rs  command.rs  configuration.rs  e2e.rs  file_rolling.rs  markdown.rs  note.rs  note_file.rs  noted_cli.rs  search_result.rs
