[package]
name = "noted"
version = "0.1.0-beta.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0"
dirs = "4.0.0"
chrono = "0.4"
git2 = "0.13"
open = "2.0.1"
grep = "0.2"
glob = "0.3.0"
path-clean = "0.1.0"

[dev-dependencies]
serial_test = "*"
temp-dir = "0.1.11"