[package]
name = "noted"
version = "0.1.0-beta.2"
edition = "2018"

[lib]
name = "noted"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "noted"
path = "src/bin/noted_cli.rs"

[dependencies]
indoc = "1.0"
dirs = "4.0.0"
chrono = "0.4"
git2 = "0.14.1"
open = "2.0.1"
grep = "0.2"
glob = "0.3.0"
path-clean = "0.1.0"
clap = { version = "2.34.0", features = ["color"] }
log = "0.4.14"
simple_logger = "2.1.0"

[dev-dependencies]
serial_test = "*"
tempfile = "3.2.0"
test-context = "0.1.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
